[gd_scene load_steps=6 format=3 uid="uid://cc84515akbcye"]

[ext_resource type="Script" path="res://demo/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bvkwxaghiog5l" path="res://demo/Player.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://va7ac8iahrws" path="res://assets/monogram_extended.ttf" id="3"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -20.0
offset_right = 99.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LocalButton" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 2
text = "Play Locally"

[node name="OnlineButton" type="Button" parent="CanvasLayer/MainMenu"]
layout_mode = 2
text = "Play Online"

[node name="ConnectionPanel" type="Window" parent="CanvasLayer"]
title = "Online"
position = Vector2i(0, 36)
size = Vector2i(500, 150)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ConnectionPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/ConnectionPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="HostLabel" type="Label" parent="CanvasLayer/ConnectionPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="HostField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CanvasLayer/ConnectionPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Port"

[node name="PortField" type="LineEdit" parent="CanvasLayer/ConnectionPanel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "9999"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/ConnectionPanel/VBoxContainer"]
layout_mode = 2

[node name="ServerButton" type="Button" parent="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Server"

[node name="ClientButton" type="Button" parent="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Client"

[node name="SpectatorButton" type="Button" parent="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Spectator"

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -275.0
offset_right = 276.0
offset_bottom = 124.0
theme_override_fonts/font = SubResource("1")
horizontal_alignment = 1

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_bottom = 14.0
theme_override_fonts/font = SubResource("2")
text = "Regaining sync..."

[node name="ResetButton" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -54.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "RESET"

[node name="ServerPlayer" parent="." instance=ExtResource("2")]
position = Vector2(230, 367)

[node name="ClientPlayer" parent="." instance=ExtResource("2")]
position = Vector2(771, 364)

[node name="SpawnParent" type="Node2D" parent="."]

[connection signal="pressed" from="CanvasLayer/MainMenu/LocalButton" to="." method="_on_LocalButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/OnlineButton" to="." method="_on_OnlineButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ConnectionPanel/VBoxContainer/HBoxContainer/SpectatorButton" to="." method="_on_SpectatorButton_pressed"]
[connection signal="pressed" from="CanvasLayer/ResetButton" to="." method="_on_ResetButton_pressed"]
